<resources>
   <string name="app_name">FlashCrd_App</string>
    <string name="frontQuestion">Who is the 44th President of the United States?</string>
    <string name="barack_obama">Barack Obama</string>
    <string name="answer1">Bill Clinton</string>
    <string name="answer2">George H.W. Bush</string>
    <string name="answer3">Barack Obama</string>
    <string name="resetAnswers" />
    <string name="iconToggle" />
    <string name="questionText">Enter Question Here</string>
    <string name="answerText">Enter Answer Here</string>
    <string name="wrongAns1">Enter Wrong Option Here</string>
    <string name="wrongAns2">Enter Another Wrong Option Here</string>
</resources>

